# streamlit_file_to_db

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: app.py  backend.py  data_contract.py  frontend.py
excel_files/: correct_file.xlsx  incorrect_file_columns.xlsx  incorrect_file_rows.xlsx
tests/: contract_test.py  functional_test.py  integration_test.py
