[tool.poetry]
name = "basic-structure"
version = "0.1.0"
description = ""
authors = ["Nicolas Doege <github.repsu@passinbox.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "^4.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
