[tool.poetry]
name = "basic-structure"
version = "0.1.0"
description = ""
authors = ["Nicolas Doege <github.repsu@passinbox.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "^4.5.1"
pydantic = "^2.12.5"
pytest = "^9.0.2"
email-validator = "^2.3.0"
streamlit = "^1.55.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
